tests/ui/unboxed-closures/fn-traits-hrtb-coercion.stderr
error[E0308]: mismatched types
  --> $DIR/fn-traits-hrtb-coercion.rs:29:45
   |
LL |     let _: for<'a> fn(&'a str) -> Str<'a> = Str;
   |            ------------------------------   ^^^ one type is more general than the other
   |            |
   |            expected due to this
   |
   = note:      expected fn pointer `for<'a> fn(&'a _) -> Str<'a>`
           found struct constructor `fn(&_) -> Str<'_> {Str::<'_>}`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
